fix the overflows

--- a/styles/loading.scss
+++ b/styles/loading.scss
@@ -3,6 +3,8 @@
   align-items: center;
   justify-content: center;
   z-index: 99;
+  // background-color: aqua;
+  height: 12rem;
   .loader {
     position: relative;
     height: 8rem;
