--- a/styles/search.scss
+++ b/styles/search.scss
@@ -4,7 +4,7 @@
   position: relative;
   height: 50vh;
   width: 100%;
-  background-color: blueviolet;
+  // background-color: blueviolet;
   margin-bottom: 5rem;
   display: flex;
   align-items: center;
@@ -12,7 +12,7 @@
 
   img {
     object-fit: cover;
-    opacity: 0.5;
+    opacity: 0.8;
   }
   .search {
     height: 5rem;
